--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
+    <style>
+      .hidden {
+        display: none;
+      }
+    </style>
   </head>
   <body>
-    {% for d in data %}
-    <ul>
-      {{d.description}}
-    </ul>
-    {% endfor %}
-
-    <form action="/add" method="post">
-      <input type="text" name="description" id="" />
+    <form id="add-todo">
+      <input type="text" name="description" id="description" />
       <label for="description">Todo description</label>
       <button type="submit">Add Todo</button>
     </form>
+    <div id="error" class="hidden">Something went wrong!</div>
+    <ul id="todos">
+      {% for d in data %}
+      <li>{{d.description}}</li>
+      {% endfor %}
+    </ul>
+
+    <script>
+      document.getElementById("add-todo").onsubmit = function (e) {
+        e.preventDefault();
+        fetch("/create", {
+          method: "POST",
+          body: JSON.stringify({
+            description: document.getElementById("description").value,
+          }),
+          headers: {
+            "Content-Type": "application/json",
+          },
+        })
+          .then(function (response) {
+            return response.json();
+          })
+          .then(function (jsonResponse) {
+            console.log(jsonResponse);
+            const liItem = document.createElement("LI");
+            liItem.innerHTML = jsonResponse["description"];
+            document.getElementById("todos").appendChild(liItem);
+            document.getElementById("error").className = "hidden";
+          })
+          .catch(function (e) {
+            document.getElementById("error").className = "";
+            console.log(e);
+          });
+      };
+    </script>
   </body>
 </html>
