--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
       .hidden {
         display: none;
       }
+      ul {
+        list-style: none;
+      }
     </style>
   </head>
   <body>
@@ -20,11 +23,47 @@
     <div id="error" class="hidden">Something went wrong!</div>
     <ul id="todos">
       {% for d in data %}
-      <li>{{d.description}}</li>
+      <li>
+        <input
+          type="checkbox"
+          name="checked"
+          class="check-completed"
+          id="{{d.id}}"
+          {%
+          if
+          d.completed
+          %}
+          checked
+          {%
+          endif
+          %}
+        />
+        {{d.description}}
+      </li>
       {% endfor %}
     </ul>
 
     <script>
+      const checkboxes = document.querySelectorAll(".check-completed");
+      for (let i = 0; i < checkboxes.length; i++) {
+        const checkbox = checkboxes[i];
+        checkbox.onchange = function (e) {
+          console.log("event", e);
+          const newCompleted = e.target.checked;
+          const itemId = e.target.id;
+          fetch(`/${itemId}`, {
+            method: "POST",
+            body: JSON.stringify({
+              id: itemId,
+              completed: newCompleted,
+            }),
+            headers: {
+              "Content-Type": "application/json",
+            },
+          });
+        };
+      }
+
       document.getElementById("add-todo").onsubmit = function (e) {
         e.preventDefault();
         fetch("/create", {
