--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
           type="checkbox"
           name="checked"
           class="check-completed"
+          data-id="{{d.id}}"
           id="{{d.id}}"
           {%
           if
@@ -51,7 +52,8 @@
           console.log("event", e);
           const newCompleted = e.target.checked;
           const itemId = e.target.id;
-          fetch(`/${itemId}`, {
+          const itemId_dataset = e.target.dataset["id"];
+          fetch(`/${itemId}/set-completed`, {
             method: "POST",
             body: JSON.stringify({
               id: itemId,
