--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
 
       {% endfor %}
     </ul>
-    <div class="font-bold">Test text</div>
+    <div class="todo-text">Tailwind testing div</div>
     <script>
       const checkboxes = document.querySelectorAll(".check-completed");
       for (let i = 0; i < checkboxes.length; i++) {
