--- a/static/src/styles.css
+++ b/static/src/styles.css
@@ -4,5 +4,8 @@
 .todo-text {
   @apply text-xl font-mono font-bold;
 }
+.button {
+  @apply bg-purple-700 hover:bg-black text-white font-bold py-2 px-4 rounded;
+}
 
 @tailwind utilities;
