--- a/static/src/styles.css
+++ b/static/src/styles.css
@@ -1,11 +1,21 @@
 @tailwind base;
 @tailwind components;
 
-.todo-text {
-  @apply text-xl font-mono font-bold;
+.main-content-wrapper {
+  @apply container mx-auto font-mono;
+}
+.todo-headline {
+  @apply text-2xl font-bold;
+}
+.todo-list {
+  @apply bg-gray-300 p-2;
 }
 .button {
   @apply bg-purple-700 hover:bg-black text-white font-bold py-2 px-4 rounded;
+}
+
+.footer {
+  @apply text-green-600 bg-purple-700 hover:bg-black;
 }
 
 @tailwind utilities;
