--- a/static/src/styles.css
+++ b/static/src/styles.css
@@ -9,9 +9,20 @@
   @apply block w-1/5 bg-yellow-300;
 }
 
-.lists-wrapper li {
+.list-element {
   @apply hover:underline hover:font-bold hover:bg-white hover:border hover:border-black;
   @apply p-1;
+}
+
+.list-new-wrapper {
+  @apply flex w-full hover:no-underline;
+}
+
+.list-new {
+  @apply flex w-full bg-transparent font-black hover:no-underline;
+}
+.list-new-input {
+  @apply flex w-full bg-transparent hover:border hover:border-black mx-2 hover:bg-gray-300 rounded-md p-1 text-sm;
 }
 
 .todos-wrapper {
