--- a/static/css/main.css
+++ b/static/css/main.css
@@ -490,11 +490,23 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   font-weight: 700;
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
 }
 
 .list-element {
+  margin: 0.25rem;
+  padding: 0.25rem;
+}
+
+.list-element-active {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  font-weight: 700;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  margin: 0.25rem;
   padding: 0.25rem;
 }
 
@@ -506,6 +518,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .list-new-wrapper:hover {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
+}
+
+.list-new-wrapper {
+  margin: 0.25rem;
 }
 
 .list-new {
@@ -526,6 +542,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: flex;
   width: 100%;
   border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
   background-color: transparent;
   padding: 0.25rem;
   font-size: 0.875rem;
@@ -533,9 +552,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .list-new-input:hover {
-  border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
@@ -733,12 +749,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1rem;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
 .font-light {
   font-weight: 300;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .text-black {
@@ -755,27 +771,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   outline-style: solid;
 }
 
-.hover\:rounded-full:hover {
-  border-radius: 9999px;
-}
-
-.hover\:border:hover {
-  border-width: 1px;
-}
-
-.hover\:border-black:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
 .hover\:bg-purple-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(126 34 206 / var(--tw-bg-opacity));
-}
-
-.hover\:text-xl:hover {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .hover\:font-black:hover {
