--- a/templates/index.html
+++ b/templates/index.html
@@ -36,9 +36,15 @@
         <div class="lists-wrapper">
           <ul id="todolists">
             {% for list in lists %}
-            <a href="/lists/{{list.id}}"
-              ><li class="list-element">{{ list.name }}</li></a
-            >
+            <a href="/lists/{{list.id}}">
+              {% if list.name == active_list.name%}
+              <li class="list-element-active" id="{{list.id}}">
+                {{ list.name }}
+              </li>
+              {% else %}
+              <li class="list-element" id="{{list.id}}">{{ list.name }}</li>
+              {% endif %}
+            </a>
             {% endfor %}
             <div class="list-new-wrapper">
               <form id="new-todolist">
@@ -67,11 +73,12 @@
                 type="text"
                 name="description"
                 id="description"
-                class="bg-gray-300 border border-black rounded-md p-1"
+                placeholder="Choose your todo description"
+                class="flex bg-gray-300 border border-black rounded-md p-1"
               />
-              <label for="description">Todo description</label>
+              <!-- <label for="description">Todo description</label> -->
+              <button type="submit" class="flex button my-2">Add Todo</button>
             </div>
-            <button type="submit" class="button my-2">Add Todo</button>
           </form>
           <div id="error" class="hidden">Something went wrong!</div>
           <ul id="todos" class="todo-list">
@@ -154,14 +161,18 @@
       }
 
       document.getElementById("add-todo").onsubmit = function (e) {
+        const activeListId = document.getElementsByClassName(
+          "list-element-active"
+        )[0].id;
         console.log(e);
         e.preventDefault();
         console.log(e);
         const listId = null;
-        fetch("/create", {
+        fetch(`/lists/${activeListId}/todo/create`, {
           method: "POST",
           body: JSON.stringify({
             description: document.getElementById("description").value,
+            list_id: activeListId,
           }),
           headers: {
             "Content-Type": "application/json",
@@ -183,11 +194,11 @@
           });
       };
 
+      <!-- Creates a new todolist -->
       document.getElementById("new-todolist").onsubmit = function (e) {
-        console.log(e);
         e.preventDefault();
         console.log(e);
-        fetch("/lists/create", {
+        fetch(`/lists/create`, {
           method: "POST",
           body: JSON.stringify({
             name: document.getElementById("todolist-name").value,
