Footer | added credentials

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="main-content-wrapper">
-      <div class="todo-headline py-3">Your next Todo App</div>
+      <div class="todo-headline py-3 uppercase">Start doing. Now.</div>
       <div class="flex">
         <div class="lists-wrapper">
           <ul id="todolists">
@@ -126,6 +126,11 @@
               >
             </li>
           </ul>
+        </div>
+        <div class="flex flex-row w-full justify-center">
+          <span class="text-xs pt-5"
+            >&copy; <a href="http://andreaslempik.de">ndrslmpk</a></span
+          >
         </div>
       </div>
     </div>
